[gd_scene load_steps=15 format=2]

[ext_resource path="res://Assets/syndi-login.png" type="Texture" id=1]
[ext_resource path="res://Assets/COLOURlovers.com-Gothic_Wallpaper.jpg" type="Texture" id=2]
[ext_resource path="res://Scripts/Playfield.gd" type="Script" id=3]
[ext_resource path="res://Assets/Noteskins/Default/NoteThumbL.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Noteskins/Default/NoteThumbR.tscn" type="PackedScene" id=5]

[sub_resource type="ProceduralSky" id=1]
sky_top_color = Color( 0.0705882, 0.0705882, 0.0705882, 1 )
sky_horizon_color = Color( 0.145098, 0.145098, 0.145098, 1 )
sky_curve = 0.131768
ground_bottom_color = Color( 0.0588235, 0.0588235, 0.0588235, 1 )
ground_horizon_color = Color( 0.152941, 0.152941, 0.152941, 1 )

[sub_resource type="Environment" id=2]
background_mode = 2
background_sky = SubResource( 1 )
background_sky_custom_fov = 176.0
background_color = Color( 1, 1, 1, 1 )
ambient_light_color = Color( 1, 1, 1, 1 )
ambient_light_energy = 0.5
ambient_light_sky_contribution = 0.0

[sub_resource type="SpatialMaterial" id=3]
albedo_texture = ExtResource( 2 )

[sub_resource type="SpatialMaterial" id=4]
flags_transparent = true
flags_unshaded = true
albedo_color = Color( 0, 1, 1, 0.137255 )

[sub_resource type="SpatialMaterial" id=5]
flags_unshaded = true
albedo_color = Color( 0, 1, 1, 1 )

[sub_resource type="SpatialMaterial" id=6]
flags_transparent = true
flags_unshaded = true
albedo_color = Color( 1, 0, 1, 0.137255 )

[sub_resource type="SpatialMaterial" id=7]
flags_unshaded = true
albedo_color = Color( 1, 0, 1, 1 )

[sub_resource type="SpatialMaterial" id=8]
albedo_color = Color( 0.196078, 0.196078, 0.196078, 1 )

[sub_resource type="SpatialMaterial" id=9]
albedo_color = Color( 0.0784314, 0.0784314, 0.0784314, 1 )

[node name="ScreenGameplay" type="WorldEnvironment"]
environment = SubResource( 2 )

[node name="Background" type="Sprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, 0.996195, 0.0871557, 0, -0.0871557, 0.996195, -19.1, 0, -41.5 )
centered = false
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 170, 3820, 850 )

[node name="GameplayFloor" type="CSGPolygon" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -0.001, 0 )
polygon = PoolVector2Array( -45, -45, -45, 45, 45, 45, 45, -45 )
depth = 0.001
material = SubResource( 3 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.996195, 0.0871558, 0, -0.0871558, 0.996195, 0, 2, 7 )
current = true
fov = 25.0
size = 3.5

[node name="Playfield" type="Position3D" parent="."]
script = ExtResource( 3 )

[node name="LeftCircle" type="CSGCylinder" parent="Playfield"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, -1.5, 0.75, 0 )
radius = 0.75
height = 0.1
sides = 32
material = SubResource( 4 )

[node name="Thumb" type="CSGCylinder" parent="Playfield/LeftCircle"]
radius = 0.1
height = 0.1
sides = 32
material = SubResource( 5 )

[node name="RightCircle" type="CSGCylinder" parent="Playfield"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 1.5, 0.75, 0 )
radius = 0.75
height = 0.1
sides = 32
material = SubResource( 6 )

[node name="Thumb" type="CSGCylinder" parent="Playfield/RightCircle"]
radius = 0.1
height = 0.1
sides = 32
material = SubResource( 7 )

[node name="Highway" type="CSGPolygon" parent="Playfield"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, -1.5, 0, -45 )
polygon = PoolVector2Array( 0, 0, 0, 50, 3, 50, 3, 0 )
depth = 0.001
material = SubResource( 8 )

[node name="LeftField" type="Position3D" parent="Playfield/Highway"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.9, 45, 0 )

[node name="Left1" parent="Playfield/Highway/LeftField" instance=ExtResource( 4 )]
transform = Transform( -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, -2, 0 )

[node name="UpLeft1" parent="Playfield/Highway/LeftField" instance=ExtResource( 4 )]
transform = Transform( -0.573576, -0.819152, 0, 0.819152, -0.573576, 0, 0, 0, 1, 0, -6, 0 )

[node name="DownRight1" parent="Playfield/Highway/LeftField" instance=ExtResource( 4 )]
transform = Transform( 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 0, 0, 1, 0, -8, 0 )

[node name="Left2" parent="Playfield/Highway/LeftField" instance=ExtResource( 4 )]
transform = Transform( -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, -12, 0 )

[node name="Right1" parent="Playfield/Highway/LeftField" instance=ExtResource( 4 )]
transform = Transform( 1.19249e-08, 1, 0, -1, 1.19249e-08, 0, 0, 0, 1, 0, -14, 0 )

[node name="UpLeft2" parent="Playfield/Highway/LeftField" instance=ExtResource( 4 )]
transform = Transform( -0.707107, -0.707107, 0, 0.707107, -0.707107, 0, 0, 0, 1, 0, -22, 0 )

[node name="RightField" type="Position3D" parent="Playfield/Highway"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.1, 45, 0 )

[node name="Down1" parent="Playfield/Highway/RightField" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -4, 0 )

[node name="Right1" parent="Playfield/Highway/RightField" instance=ExtResource( 5 )]
transform = Transform( 1.19249e-08, 1, 0, -1, 1.19249e-08, 0, 0, 0, 1, 0, -10, 0 )

[node name="Up1" parent="Playfield/Highway/RightField" instance=ExtResource( 5 )]
transform = Transform( -1, 8.74228e-08, 0, -8.74228e-08, -1, 0, 0, 0, 1, 0, -16, 0 )

[node name="Down2" parent="Playfield/Highway/RightField" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -18, 0 )

[node name="Up2" parent="Playfield/Highway/RightField" instance=ExtResource( 5 )]
transform = Transform( -1, 8.74228e-08, 0, -8.74228e-08, -1, 0, 0, 0, 1, 0, -20, 0 )

[node name="UpRight1" parent="Playfield/Highway/RightField" instance=ExtResource( 5 )]
transform = Transform( -0.707107, 0.707107, 0, -0.707107, -0.707107, 0, 0, 0, 1, 0, -24, 0 )

[node name="Receptor" type="CSGPolygon" parent="Playfield/Highway"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 45, 0 )
polygon = PoolVector2Array( 0, 0, 0, 0.2, 3, 0.2, 3, 0 )
depth = 0.01
material = SubResource( 9 )

[node name="Notefield" type="Spatial" parent="Playfield"]

[node name="GUI" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="LeftInfo" type="Label" parent="GUI"]
margin_left = 24.0
margin_top = 24.0
margin_right = 64.0
margin_bottom = 38.0
text = "Left: "

[node name="RightInfo" type="Label" parent="GUI"]
margin_left = 24.0
margin_top = 48.0
margin_right = 64.0
margin_bottom = 62.0
text = "Right: "

[node name="FPSCounter" type="Label" parent="GUI"]
margin_left = 24.0
margin_top = 72.0
margin_right = 64.0
margin_bottom = 86.0
text = "FPS: "
